--- a/assets/css/tailwind/baseStyle.css
+++ b/assets/css/tailwind/baseStyle.css
@@ -8,6 +8,13 @@
     color: #fff;
 }
 
+.noSelect {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+}
+
 .card {
     box-sizing: border-box;
     transition: all 0.25s ease-in-out;
